# gst-audio-video

./: .gitignore  CMakeLists.txt  README.md
config/: rtsp_rtmp.json
include/: StreamMgr.h  audio_manage.h  common.h  gst_call_back_funcs.h  source_manage.h  video_manage.h
src/: StreamMgr.cpp  audio_manage.cpp  main.cpp  video_manage.cpp
